# ros2_linefollower

./: .gitignore  README.md  docker-compose.yml
compose/novnc/: maximize_gz.sh  supervisord.conf
docker/: novnc.Dockerfile  ros_base.Dockerfile
ros2_ws/src/line_follower_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/line_follower_bringup/launch/: line_follower_demo.launch.py
ros2_ws/src/line_follower_bringup/resource/: line_follower_bringup
ros2_ws/src/line_follower_bringup/src/line_follower_bringup/: __init__.py
ros2_ws/src/line_follower_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/line_follower_control/launch/: celebration.launch.py  control.launch.py
ros2_ws/src/line_follower_control/resource/: line_follower_control
ros2_ws/src/line_follower_control/src/line_follower_control/: __init__.py  celebration_node.py  goal_monitor_node.py  line_follower_node.py
ros2_ws/src/line_follower_robot/: package.xml  setup.cfg  setup.py
ros2_ws/src/line_follower_robot/launch/: spawn_robot.launch.py
ros2_ws/src/line_follower_robot/resource/: line_follower_robot
ros2_ws/src/line_follower_robot/src/line_follower_robot/: __init__.py
ros2_ws/src/line_follower_robot/urdf/: line_follower_bot.urdf.xacro
ros2_ws/src/line_follower_world/: package.xml  setup.cfg  setup.py
ros2_ws/src/line_follower_world/launch/: world.launch.py
ros2_ws/src/line_follower_world/models/party_dino/: model.config  model.sdf
ros2_ws/src/line_follower_world/resource/: line_follower_world
ros2_ws/src/line_follower_world/src/line_follower_world/: __init__.py
ros2_ws/src/line_follower_world/worlds/: line_world.world
scripts/: analyze_logs.py  run_and_test.sh
