<?xml version="1.0"?>
<package format="3">
  <name>line_follower_bringup</name>
  <version>0.0.1</version>
  <description>Launch files to bring up full line follower simulation.</description>
  <maintainer email="dev@linefollower.local">ROS Line Follower</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>line_follower_world</depend>
  <depend>line_follower_robot</depend>
  <depend>line_follower_control</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
