<?xml version="1.0"?>
<package format="3">
  <name>line_follower_robot</name>
  <version>0.0.1</version>
  <description>Simple differential drive robot with downward camera for line following.</description>
  <maintainer email="dev@linefollower.local">ROS Line Follower</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
